# firebolt-apis

./: .commitlintrc.json  .gitignore  .npmignore  .releaserc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  babel.config.js  compare.sh  firebolt-openrpc.config.json  jest.config.js  jest.config.json  package-lock.json  package.json  push-docs.sh  tsconfig.json  version.json  webpack.config.js  webpack.tests.config.js
.github/: Dockerfile  deps
.github/fca/: dependency.patch
.github/mock-firebolt/: config.json  events.patch  firebolt-open-rpc.json
.github/openrpc/: firebolt-app-open-rpc.json  firebolt-open-rpc.json  firebolt-specification.json
.github/scripts/: install-deps.sh  mk-release-package.sh  run-component-tests.sh
.github/workflows/: clone_mfos.yml  cxx-build.yml  merge-to-main.yml  merge-to-next-major.yml  node.js.yml  pr-comment.yml  release-github.yml  run-standalone-mfos-tests.sh  run-standalone-mfos-tests.yml  utils.cjs  utils.sh
requirements/: glossary.md  governance.md  rpc-guidelines.md  style-guide-and-template.md
requirements/specifications/: channels.md  index.md
src/cpp/: .clang-format  .deps  .transport.version  CMakeLists.txt  build.sh  firebolt-core-open-rpc.json  firebolt-open-rpc.json
src/cpp/cmake/: FindCurl.cmake  FireboltClientConfig.cmake.in  FireboltSDKConfig.cmake.in  HelperFunctions.cmake  project.cmake.in
src/cpp/demo/: CMakeLists.txt  FireboltDemoService.cpp  FireboltDemoService.h  build.sh  main.cpp
src/cpp/include/: Portability.h  accessibility.h  advertising.h  closedcaptions.h  device.h  display.h  error.h  firebolt.h  hdmiinput.h  lifecycle.h  localization.h  metrics.h  presentation.h  securestorage.h  stats.h  version.h.in
src/cpp/include/common/: accessibility.h  types.h
src/cpp/include/firebolt/: advertising.h  device.h  firebolt.h  localization.h  presentation.h
src/cpp/src/: CMakeLists.txt  FireboltSDK.conf.in  FireboltSDK.h  IModule.h  Module.cpp  Module.h  TypesPriv.h  accessibility_impl.cpp  accessibility_impl.h  advertising_impl.cpp  advertising_impl.h  closedcaptions_impl.cpp  closedcaptions_impl.h  device_impl.cpp  device_impl.h  display_impl.cpp  display_impl.h  firebolt.cpp  hdmiinput_impl.cpp  hdmiinput_impl.h  helpers.cpp  helpers.h  jsondata_accessibility.h  jsondata_device_types.cpp  jsondata_device_types.h  jsondata_hdmiinput_types.h  jsondata_lifecycle_types.h  jsondata_securestorage_types.h  jsondata_types.cpp  jsondata_types.h  lifecycle_impl.cpp  lifecycle_impl.h  localization_impl.cpp  localization_impl.h  metrics_impl.cpp  metrics_impl.h  presentation_impl.cpp  presentation_impl.h  securestorage_impl.cpp  securestorage_impl.h  (+3 more)
src/cpp/src/Accessor/: Accessor.cpp  Accessor.h  WorkerPool.h
src/cpp/src/Async/: Async.cpp  Async.h
src/cpp/src/Event/: Event.cpp  Event.h
src/cpp/src/Logger/: Logger.cpp  Logger.h
src/cpp/src/Properties/: Properties.h
src/cpp/src/Transport/: Transport.cpp  Transport.h
src/cpp/src/json_types/: jsondata_accessibility.cpp  jsondata_accessibility.h  jsondata_accessibility_types.h  jsondata_advertising_types.h  jsondata_device_types.cpp  jsondata_device_types.h  jsondata_display_types.h  jsondata_hdmiinput_types.cpp  jsondata_hdmiinput_types.h  jsondata_lifecycle_types.cpp  jsondata_lifecycle_types.h  jsondata_securestorage_types.cpp  jsondata_securestorage_types.h  jsondata_stats_types.h
src/cpp/test/: CMakeLists.txt  ComponentTestsMain.cpp  CoreClientTest.cpp  CoreClientTest.h  CoreSDKTest.cpp  CoreSDKTest.h  Main.cpp  Unit.cpp  json_engine.h  utils.cpp
src/cpp/test/component/: accessibilityTest.cpp  advertisingTest.cpp  deviceTest.cpp  displayTest.cpp  hdmiInputTest.cpp  lifecycle2Test.cpp  lifecycleTest.cpp  localizationTest.cpp  metricsTest.cpp  presentationTest.cpp  secureStorageTest.cpp  statsTest.cpp  utils.cpp  utils.h
src/cpp/test/cpp_test/: CMakeLists.txt  main  main.cpp
src/cpp/test/cpp_test/cpp/: chooseInterface.cpp  chooseInterface.h  deviceDemo.cpp  deviceDemo.h  firebolt-open-rpc.json.in  fireboltdemo.cpp  fireboltdemo.h  lifecycleDemo.cpp  lifecycleDemo.h  utils.cpp  utils.h
src/cpp/test/unit/: MockHelper.h  accessibilityTest.cpp  advertisingTest.cpp  deviceTest.cpp  displayTest.cpp  hdmiInputTest.cpp  json_engine.h  lifecycleTest.cpp  localizationTest.cpp  metricsTest.cpp  mock_helper.h  presentationTest.cpp  secureStorageTest.cpp  statsTest.cpp  unit.h
src/js/: version.mjs
src/json/: firebolt-specification.json
src/modules/: _internal.json  account.json  (+15 more)
src/sdks/core/src/cpp/sdk/cpptest/: CMakeLists.txt  CoreSDKTest.cpp  CoreSDKTest.h  InteractiveApp.cpp  Main.cpp  Unit.cpp  build.sh
src/sdks/core/src/cpp/sdk/cpptest/include/: IGateway.h  IGatewayMock.h  IProperties.h  IPropertiesMock.h  JsonDataMock.h  mockGateway.h  mockProperties.h
src/sdks/core/src/cpp/sdk/cpptest/mock/: accessibilityMockTest.cpp  accountTest.cpp  advertisingMockTest.cpp  authenticationMock.cpp  capabilitiesMockTest.cpp  deviceMockTest.cpp  lifecycleMockTest.cpp  localizationMockTest.cpp  metricsMockTest.cpp  mockGateway.h  mockProperties.h  parametersMockTests.cpp  profileMockTest.cpp  secondscreenMockTest.cpp  securestorageMockTest.cpp
src/sdks/core/src/cpp/sdk/cpptest/unit/: accessibilityTest.cpp  accountTest.cpp  advertisingTest.cpp  authenticationTest.cpp  biDirectionalGatewayTest.cpp  capabilitiesTest.cpp  deviceTest.cpp  discoveryTest.cpp  gatewayTest.cpp  internalTest.cpp  keyboardTest.cpp  lifecycleTest.cpp  localizationTest.cpp  metricsTest.cpp  parametersTest.cpp  profileTest.cpp  secondScreenTest.cpp  secondscreenTest.cpp  secureStorageTest.cpp  securestorageTest.cpp  uniDirectionalGatewayTest.cpp  unit.h
src/sdks/core/src/cpp/sdk/test/: CMakeLists.txt  CoreSDKCTests.h  CoreSDKTestGeneratedCode.c  CoreSDKTestGeneratedCode.cpp  CoreSDKTestGeneratedCode.h  CoreSDKTestStaticCode.cpp  CoreSDKTestStaticCode.h  CoreSDKTests.cpp  CoreSDKTests.h  Main.c  Main.cpp  Module.cpp  Module.h
src/sdks/discovery/src/cpp/sdk/cpptest/: CMakeLists.txt  DiscoverySDKTest.cpp  DiscoverySDKTest.h  Main.cpp
test/: Setup.js  TransportHarness.js
(+377 files in other folders)
